Fix content jump without scrollbar-gutter

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,10 +19,6 @@
 
 html {
   scroll-behavior: smooth;
-  /* Maintain the space of the scrollbar
-    to avoid jumps
-  */
-  scrollbar-gutter: stable; 
 }
 
 body {
